--- a/myproject/login/templates/login/form.html
+++ b/myproject/login/templates/login/form.html
@@ -23,6 +23,9 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+      {% for a in book %}
+         {{a}}
+      {% endfor %}
   </body>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 </html>
